[project]
name = "pev-langgraph"
version = "0.1.0"
description = "Production LangGraph template: Plan → Execute → Validate with confidence scoring, per-step retry, and automatic replanning"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Manjunath Govindaraju", email = "manjunath.govindaraju@gmail.com" }
]
keywords = ["langgraph", "langchain", "multi-agent", "plan-execute", "ai-agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.28",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pev"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E: pycodestyle errors
# F: Pyflakes
# I: isort
# UP: pyupgrade
# B: flake8-bugbear
# SIM: flake8-simplify
# N: pep8-naming
# D: pydocstyle
# S: flake8-security
# PTH: flake8-use-pathlib
# ARG: flake8-unused-arguments
# PERF: Perflint
select = ["E", "F", "I", "UP", "B", "SIM", "N", "D", "S", "PTH", "ARG", "PERF"]
ignore = ["E501", "D100", "D104"] # Ignore missing docstrings in modules/packages

[tool.ruff.lint.isort]
known-first-party = ["pev"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: integration tests that call live LLM APIs (deselect with '-m not slow')",
]
addopts = "--cov=src/pev --cov-report=term-missing -v"
